Add mission logic. Add SQL support with IBaseAdapter. Boy scout rule.

--- a/API/StuffToDo.API/appsettings.Development.json
+++ b/API/StuffToDo.API/appsettings.Development.json
@@ -5,5 +5,8 @@
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
     }
+  },
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=N1NWPLSK12SQL-v03.shr.prod.ams1.secureserver.net;Database=stuff_to_do;user id=todoadmin;password=odoffutsfoTolA12"
   }
 }
