--- a/Commons/Missions.Common.Lib/Missions.Common.Lib.csproj
+++ b/Commons/Missions.Common.Lib/Missions.Common.Lib.csproj
@@ -8,4 +8,12 @@
     <Folder Include="Services\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Remove="Dapper" />
+    <None Remove="System.Data.SqlClient" />
+  </ItemGroup>
+  <ItemGroup>
+    <PackageReference Include="Dapper" Version="2.0.123" />
+    <PackageReference Include="System.Data.SqlClient" Version="4.8.3" />
+  </ItemGroup>
 </Project>
